<resources>
    <string name="app_name">Blanat</string>
    <string name="acceuil">Explorez, trouvez des affaires incroyables, et économisez votre argent avec notre appli!</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="fb">&#x1F44D; FaceBook</string>
    <!--current-->
    <string name="required_fields_message">Veuillez remplir tous les champs obligatoires.</string>
    <string name="title_activity_testnav">testnav</string>
    <string name="title_home">Acceuil</string>
    <string name="title_dashboard">Ajouter</string>
    <string name="title_notifications">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--profile-->
    <string name="SauvDeal">Deals Sauvegardés</string>
    <string name="parametres">Paramètres</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="back">Back</string>
    <string name="modmdp">Modifier Mot de Passe</string>
    <string name="ancien_mdp">Ancien Mot de Passe</string>
    <string name="verifier_mdp">Verifier Mot de Passe</string>
    <string name="nv_mdp">Nouveau Mot de Passe</string>
    <string name="modifier_mdp">Modifier Mon Mot de Passe</string>
    <string name="del_account">Supprimer mon Compte</string>

    <!--incoming-->

    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="msg_le_message_di">le message à discuter</string>
    <string name="lbl_auteur">Auteur</string>
    <string name="lbl_new_deal">New Deal</string>
    <string name="lbl_back">Back</string>
    <string name="lbl_Mydiscussion">My Discussions</string>

    <string name="lbl_search">Search</string>
    <string name="lbl_nbre">nbre</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_compte">Compte</string>
    <string name="lbl_categorie">Categorie</string>
    <string name="msg_heure_du_dernie">heure du dernier envoie</string>
    <string name="lbl_acceuil">Acceuil</string>
    <string name="lbl_account">Account</string>
    <string name="lbl_nouveau_blan">Nouveau Blan</string>
    <!--create discussion-->
    <string name="enter_deal_link">Veuillez entrer un lien valide :*</string>
    <string name="msg_titre_de_discus">Titre de discussion:*</string>
    <string name="msg_veuillez_entrer">Veuillez saisir un titre </string>
    <string name="msg_veuillez_entrer2">Veuillez saisir une description </string>
    <string name="msg_veuillez_entrer3">Veuillez saisir une localisation </string>
    <string name="msg_veuillez_entrer4">Le champ Nouveau Prix DH est obligatoire </string>
    <string name="msg_veuillez_entrer5">Le champ Ancien Prix DH est obligatoire </string>
    <string name="lbl_description">Description:*</string>
    <string name="msg_ajouter_une_dis">Ajouter une discussion</string>
    <string name="lbl_create">Create</string>

    <!--For Nav sideBar-->
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!--For Dialog Discussion-->
    <string name="Dialog_Discussion">CustomDialog</string>
    <string name="Dialog_message">Es-tu sûr de supprimer cette discussion!</string>


</resources>
