<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    style="@style/groupStylewhite_A700"
    android:layout_marginTop="@dimen/_7pxh"
    android:layout_marginBottom="@dimen/_7pxh"
    android:layout_marginStart="@dimen/_13pxh"
    android:layout_marginEnd="@dimen/_13pxh"
    >

    <LinearLayout
        android:id="@+id/linearColumnheader"
        style="@style/groupStylewhite_A700"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12px"
        android:layout_marginTop="12px"
        android:layout_marginEnd="12px"
        android:gravity="start"
        android:orientation="vertical"
        android:elevation="4dp"
    android:outlineSpotShadowColor="@color/cyan_800">

        <LinearLayout
            android:id="@+id/linearRowheader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_7pxh"
            android:layout_marginEnd="@dimen/_12pxh"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtCategorie"
                style="@style/txtIntersemibold16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.31"
                android:ellipsize="end"
                android:maxLines="10"
                android:minLines="3"
                android:singleLine="true"
                android:text="@string/lbl_categorie" />

            <LinearLayout
                android:id="@+id/linearRowheuredudernie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_52pxh"
                android:layout_marginTop="@dimen/_1pxh"
                android:layout_marginBottom="@dimen/_1pxh"
                android:layout_weight="0.69"
                android:orientation="horizontal" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtTitre"
            style="@style/txtInterregular14_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_10pxh"
            android:layout_marginEnd="@dimen/_12pxh"
            android:ellipsize="end"
            android:maxLines="10"
            android:minLines="3"
            android:text="@string/msg_le_message_di" />


        <LinearLayout
            android:id="@+id/linearRowgroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_1pxh"
            android:layout_marginTop="@dimen/_11pxh"
            android:gravity="end"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageGroupOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_60pxh"
                android:layout_marginTop="@dimen/_10pxh"
                android:layout_marginBottom="@dimen/_10pxh"
                android:scaleType="fitXY"
                />

            <FrameLayout
                android:id="@+id/frameStacksearch"
                android:layout_width="@dimen/_283pxh"
                android:layout_height="@dimen/_32pxh"
                android:layout_marginStart="@dimen/_8pxh"
                android:layout_marginTop="@dimen/_1pxh">

                <ImageView
                    android:id="@+id/imageSearch"
                    android:layout_width="@dimen/_18pxh"
                    android:layout_height="@dimen/_18pxh"
                    android:layout_gravity="top|end"
                    android:layout_marginStart="@dimen/_53pxh"
                    android:layout_marginTop="@dimen/_10pxh"
                    android:layout_marginEnd="@dimen/_53pxh"
                    android:layout_marginBottom="@dimen/_10pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_search" />


                <LinearLayout
                    android:id="@+id/linearColumnauteur"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|start"
                    android:layout_marginTop="@dimen/_10pxh"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/linearRowauteur"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:gravity="start"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txtCreateur"
                            style="@style/txtInterregular14_1"
                            android:layout_width="130dp"
                            android:layout_height="wrap_content"
                            android:minLines="3"
                            android:maxLines="10"
                            android:layout_marginTop="@dimen/_1pxh"
                            android:layout_weight="0.6"
                            android:ellipsize="end"
                            android:singleLine="true"
                            android:text="@string/lbl_auteur" />

                        <TextView
                            android:id="@+id/txtNbrVue"
                            android:layout_width="65dp"
                            android:layout_height="19dp"
                            android:minLines="3"
                            android:maxLines="10"
                            android:layout_marginStart="@dimen/_140pxh"
                            android:layout_marginBottom="@dimen/_3pxh"
                            android:layout_weight="0.4"
                            android:ellipsize="end"
                            android:singleLine="true"
                            android:text="@string/lbl_nbre" />

                    </LinearLayout>

                    <View
                        android:id="@+id/lineDividerLine"
                        android:layout_width="@dimen/_262pxh"
                        android:layout_height="@dimen/_1pxh"
                        android:layout_gravity="end"
                        android:layout_marginStart="@dimen/_10pxh"
                        android:layout_marginTop="@dimen/_10pxh"
                        android:background="@color/gray_200" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageVector"
                    android:layout_width="@dimen/_20pxh"
                    android:layout_height="@dimen/_20pxh"
                    android:layout_gravity="top|end"
                    android:layout_marginStart="@dimen/_104pxh"
                    android:layout_marginTop="@dimen/_10pxh"
                    android:layout_marginEnd="@dimen/_104pxh"
                    android:layout_marginBottom="@dimen/_10pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/avantsaveicon"
                    android:tag="{position}" />

            </FrameLayout>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
